# tiny-llm-serving-gateway-2026

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  config.yaml  go.mod  go.sum
cmd/server/: BUILD.bazel  main.go
internal/config/: BUILD.bazel  config.go  fx.go
internal/entities/: BUILD.bazel  anthropic.go  entities.go  gateway.go  openai.go
internal/handlers/: BUILD.bazel  grpc.go  http.go  llm.go
internal/mappers/: BUILD.bazel  proto.go  provider.go
internal/providers/: BUILD.bazel  anthropic.go  fx.go  openai.go  provider.go
internal/router/: BUILD.bazel  router.go
proto/gateway/v1/: BUILD.bazel  gateway.proto  gateway_api.proto
tools/go/: defs.bzl
