module(
    name = "tiny_llm_serving_gateway",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.37.0")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "protobuf", version = "27.3")

# Download Go SDK matching go.mod version
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.13")

# Declare external Go dependencies from go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Run `bazel mod tidy` to let Bazel manage this list automatically.
use_repo(
    go_deps,
    "in_gopkg_yaml_v3",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_uber_go_fx",
)
