# gazelle:ignore

load("//tools/go:defs.bzl", "go_library")

go_library(
    name = "handlers",
    srcs = [
        "grpc.go",
        "http.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//gen/gateway/v1:gatewayv1",
        "//internal/mappers",
        "//internal/router",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
