# gazelle:ignore

load("//tools/go:defs.bzl", "go_library")

go_library(
    name = "providers",
    srcs = [
        "anthropic.go",
        "fx.go",
        "openai.go",
        "provider.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//internal/config",
        "//internal/entities",
        "//internal/mappers",
        "@org_uber_go_fx//:fx",
    ],
)
